--- a/codesnug_2/templates/bases/bootstrap-member.html
+++ b/codesnug_2/templates/bases/bootstrap-member.html
@@ -12,7 +12,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'user_home' %}">Demo Members Area</a>
+          <a class="navbar-brand" href="{% url 'user_home' %}">Members Area</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
