--- a/codesnug_2/templates/bases/bootstrap-minimal.html
+++ b/codesnug_2/templates/bases/bootstrap-minimal.html
@@ -11,7 +11,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">All Auth Demo</a>
+          <a class="navbar-brand" href="/">Codesnug</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
