--- a/codesnug_2/templates/bases/bootstrap-visitor.html
+++ b/codesnug_2/templates/bases/bootstrap-visitor.html
@@ -12,7 +12,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Django-All-Auth Demo</a>
+          <a class="navbar-brand" href="/">Codesnug</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
